--- a/o2o/src/main/resources/jdbc.properties
+++ b/o2o/src/main/resources/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8&test?useSSL=false
 jdbc.username=root
 #jdbc.password=24865
-jdbc.password=a0712a11b59d69eb0d347b2465cc7247
+jdbc.password=
