--- a/o2o/src/main/resources/jdbc.properties
+++ b/o2o/src/main/resources/jdbc.properties
@@ -1,5 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8&test?useSSL=false
-jdbc.username=root
-#jdbc.password=24865
-jdbc.password=
+jdbc.username=WnplV/ietfQ=
+jdbc.password=Hg/GufEXQZo=
